--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
-    <string name="app_name">PortfolioApp</string>
+    <string name="app_name">Nanodegree Apps</string>
+    <string name="title">Nanodegree Apps</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="spotify_streamer_text">Spotify Streamer</string>
+    <string name="scores_text">Football Scores</string>
+    <string name="library_text">Library App</string>
+    <string name="build_it_bigger_text">Build It Bigger</string>
+    <string name="xyz_reader_text">XYZ Reader</string>
+    <string name="capstone_text">Capstone: My Own App</string>
     <string name="action_settings">Settings</string>
 </resources>
